<resources>
    <string name="app_name">Notely</string>
    <string name="title_notes">Notes</string>
    <string name="title_subjects">Categories</string>
    <string name="title_takeNote">New Note</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>

    <string name="note_title">Note Title</string>
    <string name="category">Category</string>
    <string name="completion_date">Completion Date</string>
    <string name="written_date">Written Date</string>

    <string name="title">Title</string>
    <string name="take_note_here">Start Your Note Here!</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>

    <string-array name="order_list">
        <item>Title Descending</item>
        <item>Title Ascending</item>
        <item>Last Edit Descending</item>
        <item>Last Edit Ascending</item>
        <item>Calendar View</item>
    </string-array>
</resources>
