<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_allnotes"
        android:icon="@drawable/ic_action_allnotes"
        android:title="@string/title_notes"/>

    <item
        android:id="@+id/navigation_subjects"
        android:icon="@drawable/ic_action_subjects"
        android:title="@string/title_subjects"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_takeNote"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_settings" />

</menu>
